compiler/test-data/parser/types/errors/asset_on_collection.frel
module test

theme BadTheme {
    gradients : asset List<Color>
}
